created gemini service

--- a/Recipedia/Recipedia/appsettings.json
+++ b/Recipedia/Recipedia/appsettings.json
@@ -5,5 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=RecipediaDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
+  "Gemini": {
+    "ApiKey": "AIzaSyCl6a_547JUlUmH6zEY0emXdAMTp_3DBcM",
+    "BaseUrl": "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent"
+  }
 }
+
