working generated recipe

--- a/Recipedia/Recipedia/appsettings.json
+++ b/Recipedia/Recipedia/appsettings.json
@@ -10,8 +10,8 @@
     "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=RecipediaDB;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Gemini": {
-    "ApiKey": "AIzaSyCl6a_547JUlUmH6zEY0emXdAMTp_3DBcM",
-    "BaseUrl": "https://generativelanguage.googleapis.com/v1beta/models/gemini-2.0-flash:generateContent"
+    "ApiKey": "AIzaSyAq-b_upkn-Zyle40-660SSiv_mcmsBe4M",
+    "BaseUrl": "https://generativelanguage.googleapis.com/v1beta/"
   }
 }
 
