Update DB connection, add DataProtection, and revise styles
Changed the database connection string to use a remote SQL Server instance. Added DataProtection configuration to persist keys to the filesystem and set the application name. Updated _Layout.cshtml to load Bootstrap from CDN and added versioning to local CSS files for cache busting.

--- a/Recipedia/Recipedia/appsettings.json
+++ b/Recipedia/Recipedia/appsettings.json
@@ -7,7 +7,8 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=RecipediaDB;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=recipedia-db.cuvoi44wqts4.us-east-1.rds.amazonaws.com,1433;Database=RecipediaDB;User Id=admin;Password=pm1287561;Encrypt=True;TrustServerCertificate=True;"
   }
+
 }
 
