Migrate database from SQL Server to PostgreSQL
Removed old SQL Server migrations and added new migrations for PostgreSQL. Updated connection string, EF Core provider, and Docker/hosting configuration to support PostgreSQL. Added compose.yaml for container orchestration.

--- a/Recipedia/Dockerfile
+++ b/Recipedia/Dockerfile
@@ -15,5 +15,7 @@ FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS runtime
 WORKDIR /app
 COPY --from=build /app/publish .
 
-ENV ASPNETCORE_URLS=http://+:80
+# Use Render's dynamic port
+ENV ASPNETCORE_URLS=http://0.0.0.0:${PORT:-8080}
+EXPOSE 8080
 ENTRYPOINT ["dotnet", "Recipedia.dll"]
