--- a/Recipedia/Recipedia/appsettings.json
+++ b/Recipedia/Recipedia/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Server=recipedia-db.cuvoi44wqts4.us-east-1.rds.amazonaws.com,1433;Database=RecipediaDB;User Id=admin;Password=pm1287561;Encrypt=True;TrustServerCertificate=True;"
+    "DefaultConnection": "postgresql://recipedia_db_user:8hT1ZivzMo6aib3OvlA9vB8bNOIvYlyW@dpg-d4a0dcali9vc73f94c8g-a.oregon-postgres.render.com/recipedia_db"
   }
 
 }
