disabling file watching

--- a/Recipedia/Dockerfile
+++ b/Recipedia/Dockerfile
@@ -22,6 +22,8 @@ WORKDIR /app
 # Copy published files from build stage
 COPY --from=build /app/publish .
 
+ENV DOTNET_USE_POLLING_FILE_WATCHER=true
+
 # Use Render's dynamic port
 ENV ASPNETCORE_URLS=http://0.0.0.0:${PORT:-8080}
 EXPOSE 8080
